kubernetes-manifests/network/db-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-productdb-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql-productdb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: productcatalogservice

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-userdb-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mysql-userdb
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: userdbservice


---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-redis-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: redis-cart
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: cartservice
