kubernetes-manifests/network/ingress-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-in-ports
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
    - ports:
      - port: 80
        protocol: TCP
      - port: 443
        protocol: TCP
      - port: 22
        protocol: TCP
