kubernetes-manifests/network/web-allow-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-allow-external
spec:
  podSelector:
    matchLabels:
      app: frontend
  ingress:
  - ports:
    - port: 8080
    - port: 2222
